# aishi

./: .gitignore  README.md  _config.yml  commands.md  pyproject.toml  requirements.txt  riot.txt
aishi/: api.py  data.json  keep_alive.py  main.py  messages.py  raids.py
aishi (1)/: main.py
aishi_2.0/: api.py  keep_alive.py  main.py  messages.py  raids.py  twitch.py
aishi_2.0/cogs/: egg.py  genshin.py  granblue.py  help.py  league.py  other.py  profile.py
