[tool.poetry]
name = "aishi"
version = "0.1.0"
description = ""
authors = ["Ailurose"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.15.0"
tweepy = "^3.9.0"
pymongo = "^3.11.2"
tasks = "^2.5.1"
pet-pet-gif = "^1.0.1"
dnspython = "^2.1.0"
nums-from-string = "^0.1.2"
twitchio = "^2.1.5"
py-cord = "^1.7.3"
discord = "^1.7.3"
raid = "^0.3.64"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
